fix overlapping error text on sign-in page

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -109,6 +109,7 @@ body {
 .error-alert {
   color: red;
   margin-bottom: -19px;
+  margin-top: 15px;
 }
 
 .not-registered {
